--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,13 +37,13 @@
     <string name="home">Home</string>
     <string name="account">Account</string>
     <string name="logout">Log Out</string>
-    <string name="contribution_score">Contribution: </string>
+    <string name="contribution_score">Contribution:&#160;</string>
     <string name="account_information">Account Information</string>
     <string name="starred_products">Starred Products</string>
     <string name="scan_history">Scan History</string>
     <string name="about_us">About Us</string>
     <string name="scan_a_barcode">Scan a barcode</string>
-    <string name="home_greeting">Hi,</string>
+    <string name="home_greeting">Hi,&#160;</string>
     <string name="home_recommendation_title">Products you may like:</string>
     <string name="dialog_camera_permission_title">Camera Access Not Enabled</string>
     <string name="dialog_camera_permission_msg">Camera permission is required to proceed this activity, enable access via "Settings" -> "App info" -> "Scannera".</string>
