--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,8 +61,8 @@
     <string name="rating_feedback_prompt">If you are interested in, please rate us and let us know how we are doing! We are always trying to improve and your feedback is invaluable!</string>
     <string name="feedback">Feedback</string>
     <string name="submit">Submit</string>
-    <string name="rating_empty">Please give us a rate :D</string>
-    <string name="feedback_empty">Please let us know what you thought by writing some feedback :D</string>
+    <string name="rating_empty">Please give us a rate. :)</string>
+    <string name="feedback_empty">Please let us know what you thought by writing some feedback. :)</string>
     <string name="feedback_success">Successfully submitted! Thank you very much for your feedback!</string>
     <string name="loading">Loading…</string>
     <string name="loading_dialog_tag">Loading Dialog</string>
