--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,7 +109,7 @@
     <string name="name">Name:</string>
     <string name="brand">Brand:</string>
     <string name="price">Price:</string>
-    <string name="nutri_info_with_units">Nutritional Information:\n(Per 100 g/mL)</string>
+    <string name="nutri_info_with_units">Nutrition Information:\n(Per 100 g/mL)</string>
     <string name="similar_products">Similar Products</string>
     <string name="sort_by">Sort by:</string>
 
