--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -157,6 +157,7 @@
 
     <!-- ERROR MESSAGES -->
     <string name="server_error">Sorry, it seems like the request was not successful due to a server error, please try again.</string>
+    <string name="general_error">Sorry, it seems like the request was not successful due to an internal error, please try again.</string>
     <string name="error_input_cannot_be_empty">This field cannot be empty.</string>
     <string name="email_input_error">Invalid email address format, please check again.</string>
     <string name="email_address_taken_error">This email address has already been registered.</string>
