Fine tuning on some app details. implemented a farewell msg on user delete, etc...

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -41,7 +41,7 @@
     <string name="about_us">关于我们</string>
     <string name="app_guide">应用程序指南</string>
     <string name="scan_a_barcode">扫描二维码</string>
-    <string name="home_greeting">您好，&#160;</string>
+    <string name="home_greeting">您好，&#160;%1$s</string>
     <string name="home_recommendation_title">您可能喜欢的产品：</string>
     <string name="dialog_camera_permission_title">摄像头访问未启用</string>
     <string name="dialog_camera_permission_msg">此活动需要相机权限才能进行，请通过”设置“ -> "应用信息" -> "Scannera" 来开启权限.</string>
@@ -105,6 +105,7 @@
     <string name="nutri_info_with_units">营养信息：\n（每 100 克/毫升）</string>
     <string name="similar_products">相似产品</string>
     <string name="sort_by">排序方式：</string>
+    <string name="farewell_user_on_delete">成功删除账号，祝一切顺利并期待下次再见！</string>
 
 
     <!-- Category Dropdown Menu String Array -->
