--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,7 +44,7 @@
     <string name="about_us">About Us</string>
     <string name="app_guide">App Guide</string>
     <string name="scan_a_barcode">Scan a barcode</string>
-    <string name="home_greeting">Hi,&#160;</string>
+    <string name="home_greeting">Hi,&#160;%1$s</string>
     <string name="home_recommendation_title">Products you may like:</string>
     <string name="dialog_camera_permission_title">Camera Access Not Enabled</string>
     <string name="dialog_camera_permission_msg">Camera permission is required to proceed this activity, enable access via "Settings" -> "App info" -> "Scannera".</string>
@@ -113,7 +113,7 @@
     <string name="nutri_info_with_units">Nutrition Information:\n(Per 100 g/mL/kJ)</string>
     <string name="similar_products">Similar Products</string>
     <string name="sort_by">Sort by:</string>
-
+    <string name="farewell_user_on_delete">User account successfully deleted, all the best and hope to see you again!</string>
 
     <!-- Category Dropdown Menu String Array -->
     <string-array name="categories">
