Created product review fragment, implemented its layout

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -105,6 +105,8 @@
     <string name="nutri_info_with_units">营养信息：\n（每 100 克/毫升）</string>
     <string name="similar_products">相似产品</string>
     <string name="sort_by">排序方式：</string>
+    <string name="product_reviews">产品评价</string>
+    <string name="write_a_review">Write A Review</string>
     <string name="farewell_user_on_delete">成功删除账号，祝一切顺利并期待下次再见！</string>
 
 
