--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -164,6 +164,7 @@
     <string name="valid_user_input">成功</string>
     <string name="invalid_username_or_email">无效的用户名或电子邮件，请重新检查。</string>
     <string name="user_acc_password_not_match_error">用户名/电子邮箱或密码不正确，请重新检查。</string>
+    <string name="record_scan_error">抱歉，由于服务器错误无法记录此次扫描。</string>
 
     <!-- ACCESSIBILITY RELATED -->
     <string name="barcode_scanner_hint">将相机对准条形码进行扫描</string>
