--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,8 +177,10 @@
     <string name="valid_user_input">success</string>
     <string name="invalid_username_or_email">Invalid Username or Email, please check again.</string>
     <string name="user_acc_password_not_match_error">Incorrect username/email or password, please check again.</string>
-    <string name="record_scan_error">Sorry, failed to record the scan due to an server error.</string>
+    <string name="record_scan_error">Sorry, failed to record the scan due to a server error.</string>
     <string name="parsing_error">Sorry, failed to parse the data due to an internal error.</string>
+    <string name="post_product_review_error">Sorry, failed to submit your product review due to a server error, please try again.</string>
+    <string name="get_product_review_error">Sorry, failed to get the product reviews due to a server error.</string>
 
     <!-- ACCESSIBILITY RELATED -->
     <string name="barcode_scanner_hint">Point your camera at a barcode to scan</string>
